--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Ceevee - Free Responsive HTML5/CSS3 Template</title>
+	<title>Jefferson A. Neel</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -46,7 +46,7 @@
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
-	         <li><a class="smoothscroll" href="#resume">Resume</a></li>
+	          <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
@@ -56,10 +56,10 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">I'm Jonathan Doe.</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
-            and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
+            <h1 class="responsive-headline">I'm Jefferson Neel.</h1>
+            <h3>
+              <span>I'm a Durham based Ruby on Rails Developer</span>.
+            </h3>
             <hr />
             <ul class="social">
                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -140,7 +140,7 @@
    <section id="resume">
 
       <!-- Education
-      ----------------------------------------------- -->
+      ------------------------------------------------->
       <div class="row education">
 
          <div class="three columns header-col">
@@ -576,41 +576,9 @@
    </section> <!-- Portfolio Section End-->
 
 
-   <!-- Call-To-Action Section
-   ================================================== -->
-   <section id="call-to-action">
-
-      <div class="row">
-
-         <div class="two columns header-col">
-
-            <h1><span>Get Hosting.</span></h1>
-
-         </div>
-
-         <div class="seven columns">
-
-            <h2><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Host This Template on Dreamhost.</a></h2>
-            <p>Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
-					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. --></p>
-
-         </div>
-
-         <div class="three columns action">
-
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Sign Up Now</a>
-
-         </div>
-
-      </div>
-
-   </section> <!-- Call-To-Action Section End-->
-
-
    <!-- Testimonials Section
    ================================================== -->
-   <section id="testimonials">
+   <!-- <section id="testimonials">
 
       <div class="text-container">
 
@@ -638,27 +606,27 @@
                         </blockquote>
                      </li> <!-- slide ends -->
 
-                     <li>
+                     <!-- <li>
                         <blockquote>
                            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
                            Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
                            nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
                            </p>
                            <cite>Mr. Adobe</cite>
-                        </blockquote>
-                     </li> <!-- slide ends -->
+                        </blockquote> -->
+                     <!-- </li> <!-- slide ends -->
 
-                  </ul>
+                  <!-- </ul> -->
 
-               </div> <!-- div.flexslider ends -->
+               <!-- </div> <!-- div.flexslider ends -->
 
-            </div> <!-- div.flex-container ends -->
+            <!-- </div> <!-- div.flex-container ends -->
 
-         </div> <!-- row ends -->
+         <!-- </div> <!-- row ends -->
 
-       </div>  <!-- text-container ends -->
+       <!-- </div>  <!-- text-container ends -->
 
-   </section> <!-- Testimonials Section End-->
+   <!-- </section> <!-- Testimonials Section End-->
 
 
    <!-- Contact Section
@@ -798,7 +766,7 @@
 
             <ul class="copyright">
                <li>&copy; Copyright 2014 CeeVee</li>
-               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>   
+               <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
             </ul>
 
          </div>
