--- a/index.html
+++ b/index.html
@@ -62,13 +62,9 @@
             </h3>
             <hr />
             <ul class="social">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="https://twitter.com/eljefeasu" target="_blank"><i class="fa fa-twitter"></i></a></li>
+               <li><a href="https://www.linkedin.com/in/jeffersonneel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://github.com/eljefeasu" target="_blank"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
@@ -110,19 +106,19 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
+						   <span>Jefferson Neel</span><br>
+						   <span>5512 Bridgeman Ct<br>
+						         Durham, NC 27703 US
                      </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>(919)740-7760</span><br>
+                     <span>jefferson.neel@gmail.com</span>
 					   </p>
 
                </div>
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="JeffersonNeelResume2016.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -706,10 +702,10 @@
 
 					   <h4>Address and Phone</h4>
 					   <p class="address">
-						   Jonathan Doe<br>
-						   1600 Amphitheatre Parkway <br>
-						   Mountain View, CA 94043 US<br>
-						   <span>(123) 456-7890</span>
+						   Jefferson Neel<br>
+						   5512 Bridgeman Ct <br>
+						   Durham, NC 27703 US<br>
+						   <span>(919) 740-7760</span>
 					   </p>
 
 				   </div>
@@ -755,13 +751,10 @@
          <div class="twelve columns">
 
             <ul class="social-links">
-               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+             <li><a href="https://twitter.com/eljefeasu" target="_blank"><i class="fa fa-twitter"></i></a></li>
+             <li><a href="https://www.linkedin.com/in/jeffersonneel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+             <li><a href="https://github.com/eljefeasu" target="_blank"><i class="fa fa-github"></i></a></li>
+            </ul>
             </ul>
 
             <ul class="copyright">
