add font awesome icons and updated education information

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                <li><a href="https://twitter.com/eljefeasu" target="_blank"><i class="fa fa-twitter"></i></a></li>
                <li><a href="https://www.linkedin.com/in/jeffersonneel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                <li><a href="https://github.com/eljefeasu" target="_blank"><i class="fa fa-github"></i></a></li>
+               <li><a href="https://wizardofrails.wordpress.com" target="_blank"><i class="fa fa-wordpress"></i></a></li>
+               <li><a href="https://www.instagram.com/explore/tags/leianeel/" target="_blank"><i class="fa fa-paw"></i></a></li>
             </ul>
          </div>
       </div>
@@ -108,9 +110,9 @@
                   <p class="address">
 						   <span>Jefferson Neel</span><br>
 						   <span>5512 Bridgeman Ct<br>
-						         Durham, NC 27703 US
+						         Durham, NC 27703
                      </span><br>
-						   <span>(919)740-7760</span><br>
+						   <span>919-740-7760</span><br>
                      <span>jefferson.neel@gmail.com</span>
 					   </p>
 
@@ -118,7 +120,7 @@
 
                <div class="columns download">
                   <p>
-                     <a href="JeffersonNeelResume2016.pdf" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="JeffersonNeelResume2016.pdf" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -149,14 +151,12 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>The Iron Yard</h3>
+                  <p class="info">Ruby on Rails <span>&bull;</span> <em class="date">April 2016</em></p>
 
                   <p>
-                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
-                  ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                12 week immersive coding bootcamp. Spent 60+ hour weeks developing Rails apps
+individually and also as a part of a team.
                   </p>
 
                </div>
@@ -167,14 +167,27 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Wake Tech Community College</h3>
+                  <p class="info">Java Programming<span>&bull;</span> <em class="date">December 2015</em></p>
 
                   <p>
-                  This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
-                  Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
-                  nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
-                  ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
+                  Completed courses Intro to Programming, Database Programming, JAVA Programming,
+Mobile Application Dev 1, and Advanced JAVA Programming
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Appalachian State University</h3>
+                  <p class="info">Bachelor of Science in Psychology<span>&bull;</span> <em class="date">December 2009</em></p>
+
+                  <p>
+                  Majored in Psychology with Business Concentration
                   </p>
 
                </div>
@@ -754,6 +767,8 @@
              <li><a href="https://twitter.com/eljefeasu" target="_blank"><i class="fa fa-twitter"></i></a></li>
              <li><a href="https://www.linkedin.com/in/jeffersonneel" target="_blank"><i class="fa fa-linkedin"></i></a></li>
              <li><a href="https://github.com/eljefeasu" target="_blank"><i class="fa fa-github"></i></a></li>
+             <li><a href="https://wizardofrails.wordpress.com" target="_blank"><i class="fa fa-wordpress"></i></a></li>
+             <li><a href="https://www.instagram.com/explore/tags/leianeel/" target="_blank"><i class="fa fa-paw"></i></a></li>
             </ul>
             </ul>
 
