--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a class="smoothscroll" href="#about">About</a></li>
 	          <li><a class="smoothscroll" href="#resume">Resume</a></li>
             <li><a class="smoothscroll" href="#portfolio">Works</a></li>
-            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>
+            <!-- <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li> -->
             <li><a class="smoothscroll" href="#contact">Contact</a></li>
          </ul> <!-- end #nav -->
 
@@ -94,12 +94,11 @@
 
             <h2>About Me</h2>
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
-            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.
+            <p>I am a developer based in Durham, NC with a background in business and finance. After working at a bank for five years, I decided to make a drastic career change and learn about computer programming. I recently completed a 12-week intensive programming bootcamp at the Iron Yard in Durham, where I learned development in Ruby on Rails, HTML, CSS, Bootstrap, JavaScript, jQuery, AJAX, and SQL. Prior to the Iron Yard I took a few community college courses in Java. I also have experience developing in the Agile process and used Test Driven Development.</p>
+
+              <p>I enjoy working in a team, and during my time at the Iron Yard I worked on mlutiple projects that involved collaboration and required a strong work ethic and great attitude. If you would like to learn more about my experience at the Iron Yard and what I have been coding in the last few months, feel free to check out more on my blog -- Wizard of Rails.</p>
+
+              <p>When I am not coding, I enjoy watching sports, listening to podcasts and spending time with my family and friends. If you would like to work with me, feel free to contact me below. 
             </p>
 
             <div class="row">
@@ -646,15 +645,13 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
             <div class="two columns header-col">
 
-               <h1><span>Get In Touch.</span></h1>
+               <h1><span>Get In Touch</span></h1>
 
             </div>
 
             <div class="ten columns">
 
-                  <p class="lead">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-                  eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                  voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                  <p class="lead">Get in touch
                   </p>
 
             </div>
@@ -718,7 +715,7 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 						   Jefferson Neel<br>
 						   5512 Bridgeman Ct <br>
 						   Durham, NC 27703 US<br>
-						   <span>(919) 740-7760</span>
+						   <span>919-740-7760</span>
 					   </p>
 
 				   </div>
