--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
               <p>I enjoy working in a team, and during my time at the Iron Yard I worked on mlutiple projects that involved collaboration and required a strong work ethic and great attitude. If you would like to learn more about my experience at the Iron Yard and what I have been coding in the last few months, feel free to check out more on my blog -- Wizard of Rails.</p>
 
-              <p>When I am not coding, I enjoy watching sports, listening to podcasts and spending time with my family and friends. If you would like to work with me, feel free to contact me below. 
+              <p>When I am not coding, I enjoy watching sports, listening to podcasts and spending time with my family and friends. If you would like to work with me, feel free to contact me below.
             </p>
 
             <div class="row">
@@ -212,15 +212,21 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
                <div class="twelve columns">
 
-                  <h3>Awesome Design Studio</h3>
-                  <p class="info">Senior UX Designer <span>&bull;</span> <em class="date">March 2010 - Present</em></p>
+                  <h3>BB&T</h3>
+                  <p class="info">Branch Banker IV <span>&bull;</span> <em class="date">2011 - 2016</em></p>
 
-                  <p>
+                  <!-- <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                   Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
                   ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
                   Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
-                  </p>
+                  </p> -->
+
+                  <ul>
+                    <li type="disc">Initiated, developed and managed long-term, profitable relationships with prospective and current clients.</li>
+                    <li type="disc">Stayed up to date and follow federal and internal control regulations, including attending applicable training classes to stay informed of any changes in policies and procedures to ensure compliance.</li>
+                    <li type="disc">Selected to Cary Wealth Council in July 2013 to assist in relationships of high wealth clients, and selected to be a Branch Banker Mentor in May 2013 to train new employees in the role.</li>
+                  </ul>
 
                </div>
 
@@ -230,15 +236,20 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
                <div class="twelve columns">
 
-                  <h3>Super Cool Studio</h3>
-                  <p class="info">UX Designer <span>&bull;</span> <em class="date">March 2007 - February 2010</em></p>
+                  <h3>BB&T</h3>
+                  <p class="info">Certified Senior Teller <span>&bull;</span> <em class="date">2010 - 2011</em></p>
 
-                  <p>
+                  <!-- <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
                   Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
                   nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
                   ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat
-                  </p>
+                  </p> -->
+
+                  <ul>
+                    <li type="disc">Helped clients with basic account maintenance, accepting deposits, and processing withdrawals.</li>
+                    <li type="disc">Pulled reports each morning, managed the vault, back-up ATM teller duties, and open and closed the bank daily. Promoted to Senior Teller and trained to be certified after six months with the bank.</li>
+                  </ul>
 
                </div>
 
@@ -259,13 +270,19 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
          <div class="nine columns main-col">
 
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
-            eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-            voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-            voluptatem sequi nesciunt.
+            <p>
+              <strong>Technical</strong> | Ruby on Rails, HTML, CSS, Bootstrap, JavaScript, jQuery, AJAX, SQL, Agile Principles, Test Driven Development, Java
             </p>
 
-				<div class="bars">
+            <p>
+              <strong>Personal</strong> | Positive attitude, analytical yet relatable, flexible, genuine, fast-learner, high moral standard, and easy going personality
+            </p>
+
+            <p>
+              <strong>Leadership</strong> | Strong organization skills, excellent customer service, good communicator, self- starter, organized, detail-oriented, punctual, team-player, and strong work ethic
+            </p>
+
+				<!-- <div class="bars">
 
 				   <ul class="skills">
 					   <li><span class="bar-expand photoshop"></span><em>Photoshop</em></li>
@@ -274,9 +291,9 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 						<li><span class="bar-expand css"></span><em>CSS</em></li>
 						<li><span class="bar-expand html5"></span><em>HTML5</em></li>
                   <li><span class="bar-expand jquery"></span><em>jQuery</em></li>
-					</ul>
+					</ul> -->
 
-				</div><!-- end skill-bars -->
+				<!-- </div> end skill-bars -->
 
 			</div> <!-- main-col end -->
 
@@ -302,11 +319,11 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                   <div class="item-wrap">
 
                      <a href="#modal-01" title="">
-                        <img alt="" src="images/portfolio/coffee.jpg">
+                        <img alt="" src="images/portfolio/farefairylogo.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Coffee</h5>
-                              <p>Illustrration</p>
+          					      <h5>FareFairy</h5>
+                              <p>API</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -330,7 +347,7 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div>  <!--item end -->
 
                <div class="columns portfolio-item">
                   <div class="item-wrap">
@@ -364,9 +381,9 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                      </a>
 
                   </div>
-          		</div> <!-- item end -->
+          		</div> <!--item end -->
 
-               <div class="columns portfolio-item">
+               <!-- <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-05" title="">
@@ -380,10 +397,10 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                         <div class="link-icon"><i class="icon-plus"></i></div>
                      </a>
 
-                  </div>
-          		</div> <!-- item end -->
+                  </div> -->
+          		<!--</div>  item end -->
 
-               <div class="columns portfolio-item">
+               <!-- <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-06" title="">
@@ -397,10 +414,10 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                         <div class="link-icon"><i class="icon-plus"></i></div>
                      </a>
 
-                  </div>
-          		</div> <!-- item end -->
+                  </div> -->
+          		<!--</div>  item end -->
 
-               <div class="columns portfolio-item">
+               <!-- <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-07" title="">
@@ -414,10 +431,10 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                         <div class="link-icon"><i class="icon-plus"></i></div>
                      </a>
 
-                  </div>
-          		</div> <!-- item end -->
+                  </div> -->
+          		<!--</div>  item end -->
 
-               <div class="columns portfolio-item">
+               <!-- <div class="columns portfolio-item">
                   <div class="item-wrap">
 
                      <a href="#modal-08" title="">
@@ -431,8 +448,8 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                         <div class="link-icon"><i class="icon-plus"></i></div>
                      </a>
 
-                  </div>
-          		</div>  <!-- item end -->
+                  </div> -->
+          		<!--</div>   item end -->
 
             </div> <!-- portfolio-wrapper end -->
 
@@ -444,17 +461,18 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
          <div id="modal-01" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-coffee.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-farefairylogo.png" alt="" />
 
 		      <div class="description-box">
-			      <h4>Coffee Cup</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span>
+			      <h4>Fare Fairy</h4>
+			      <p>Rails API which gives back data from Uber, Lyft, Transit, and Taxi based on an origin address and a destination address. Final Project @ The Iron Yard</p>
+               <span class="categories"><i class="fa fa-tag"></i>Rails, API</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
+              <a href="http://farefairy.herokuapp.com/" target="_blank">Website</a><a>&nbsp;|&nbsp;</a>
+              <a href="https://github.com/Rider-App/fare_fairy" target="_blank">GitHub</a>
+		          <a class="popup-modal-dismiss">Close</a>
             </div>
 
 	      </div><!-- modal-01 End -->
@@ -474,7 +492,7 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-02 End -->
+	      </div> <!--modal-02 End -->
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
@@ -491,7 +509,7 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-03 End -->
+	      </div> <!--modal-03 End -->
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
@@ -508,9 +526,9 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
-	      </div><!-- modal-04 End -->
+	      </div> <!--modal-04 End -->
 
-         <div id="modal-05" class="popup-modal mfp-hide">
+         <!-- <div id="modal-05" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-farmerboy.jpg" alt="" />
 
@@ -523,11 +541,11 @@ Mobile Application Dev 1, and Advanced JAVA Programming
             <div class="link-box">
                <a href="http://www.behance.net">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
-            </div>
+            </div> -->
 
-	      </div><!-- modal-05 End -->
+	      <!--</div> modal-05 End -->
 
-         <div id="modal-06" class="popup-modal mfp-hide">
+         <!-- <div id="modal-06" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-girl.jpg" alt="" />
 
@@ -540,11 +558,11 @@ Mobile Application Dev 1, and Advanced JAVA Programming
             <div class="link-box">
                <a href="http://www.behance.net">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
-            </div>
+            </div> -->
 
-	      </div><!-- modal-06 End -->
+	      <!--</div> modal-06 End -->
 
-         <div id="modal-07" class="popup-modal mfp-hide">
+         <!-- <div id="modal-07" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-origami.jpg" alt="" />
 
@@ -557,11 +575,11 @@ Mobile Application Dev 1, and Advanced JAVA Programming
             <div class="link-box">
                <a href="http://www.behance.net">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
-            </div>
+            </div> -->
 
-	      </div><!-- modal-07 End -->
+	      <!--</div> modal-07 End -->
 
-         <div id="modal-08" class="popup-modal mfp-hide">
+         <!-- <div id="modal-08" class="popup-modal mfp-hide">
 
 		      <img class="scale-with-grid" src="images/portfolio/modals/m-retrocam.jpg" alt="" />
 
@@ -574,9 +592,9 @@ Mobile Application Dev 1, and Advanced JAVA Programming
             <div class="link-box">
                <a href="http://www.behance.net">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
-            </div>
+            </div> -->
 
-	      </div><!-- modal-01 End -->
+	      <!--</div> modal-01 End -->
 
 
       </div> <!-- row End -->
