--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@ Mobile Application Dev 1, and Advanced JAVA Programming
             <div class="eight columns">
 
                <!-- form -->
-               <form action="" method="post" id="contactForm" name="contactForm">
+               <form action="https://formspree.io/jefferson.neel@gmail.com" method="post" id="contactForm" name="contactForm">
 					<fieldset>
 
                   <div>
@@ -705,10 +705,7 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                   </div>
 
                   <div>
-                     <button class="submit">Submit</button>
-                     <span id="image-loader">
-                        <img alt="" src="images/loader.gif">
-                     </span>
+                     <input class="submit" type="submit" value="Submit">
                   </div>
 
 					</fieldset>
