--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
                   <h4 class="widget-title">Latest Tweets</h4>
 
-                  <ul id="twitter">
+                  <!-- <ul id="twitter">
                      <li>
                         <span>
                         This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
@@ -756,7 +756,10 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                         </span>
                         <b><a href="#">3 Days Ago</a></b>
                      </li>
-                  </ul>
+                  </ul> -->
+
+                  <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/eljefeasu" data-widget-id="721375680840273921">Tweets by @eljefeasu</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
 		         </div>
 
