--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                   <div class="item-wrap">
 
                      <a href="#modal-02" title="">
-                        <img alt="" src="images/portfolio/console.jpg">
+                        <img alt="" src="images/portfolio/opossum.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Console</h5>
+          					      <h5>Survey Opossum</h5>
                               <p>Web Development</p>
           					   </div>
                         </div>
@@ -353,11 +353,11 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                   <div class="item-wrap">
 
                      <a href="#modal-03" title="">
-                        <img alt="" src="images/portfolio/judah.jpg">
+                        <img alt="" src="images/portfolio/restaurant.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Judah</h5>
-                              <p>Webdesign</p>
+          					      <h5>Restaurant Menu</h5>
+                              <p>Ruby On Rails</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -370,11 +370,11 @@ Mobile Application Dev 1, and Advanced JAVA Programming
                   <div class="item-wrap">
 
                      <a href="#modal-04" title="">
-                        <img alt="" src="images/portfolio/into-the-light.jpg">
+                        <img alt="" src="images/portfolio/wallet.png">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
-          					      <h5>Into The Light</h5>
-                              <p>Photography</p>
+          					      <h5>Wallet App</h5>
+                              <p>Ruby On Rails</p>
           					   </div>
                         </div>
                         <div class="link-icon"><i class="icon-plus"></i></div>
@@ -479,51 +479,53 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
          <div id="modal-02" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-console.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-opossum.png" alt="" />
 
 		      <div class="description-box">
-			      <h4>Console</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding, Web Development</span>
+			      <h4>Survey Opossum</h4>
+			      <p>A survey creation app that allows users to create survey and collect responses.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Rails</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
+              <a href="https://aqueous-falls-31494.herokuapp.com/" target="_blank">Website</a><a>&nbsp;|&nbsp;</a>
+              <a href="https://github.com/Sunshine-and-Rainbows/survey_possum" target="_blank">GitHub</a>
+              <a class="popup-modal-dismiss">Close</a>
             </div>
 
 	      </div> <!--modal-02 End -->
 
          <div id="modal-03" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-judah.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-restaurant.png" alt="" />
 
 		      <div class="description-box">
-			      <h4>Judah</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Branding</span>
+			      <h4>Restaurant Menu</h4>
+			      <p>An online menu for a restaurant with a fixed number of categories and images for each category. Allows users to enter new dishes and display them on a single menu page.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Rails</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
+               <a href="https://quiet-beyond-79745.herokuapp.com/dishes" target="_blank">Website</a><a>&nbsp;|&nbsp;</a>
+               <a href="https://github.com/eljefeasu/restaurant_menu" target="_blank">GitHub</a>
+               <a class="popup-modal-dismiss">Close</a>
             </div>
 
 	      </div> <!--modal-03 End -->
 
          <div id="modal-04" class="popup-modal mfp-hide">
 
-		      <img class="scale-with-grid" src="images/portfolio/modals/m-intothelight.jpg" alt="" />
+		      <img class="scale-with-grid" src="images/portfolio/modals/m-wallet.png" alt="" />
 
 		      <div class="description-box">
-			      <h4>Into the Light</h4>
-			      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-               <span class="categories"><i class="fa fa-tag"></i>Photography</span>
+			      <h4>Wallet App</h4>
+			      <p>This is an app that lets a user keep track of transactions on an account.</p>
+               <span class="categories"><i class="fa fa-tag"></i>Rails</span>
 		      </div>
 
             <div class="link-box">
-               <a href="http://www.behance.net">Details</a>
-		         <a class="popup-modal-dismiss">Close</a>
+              <a href="https://github.com/eljefeasu/wallet" target="_blank">GitHub</a>
+		          <a class="popup-modal-dismiss">Close</a>
             </div>
 
 	      </div> <!--modal-04 End -->
