--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <p>I am a developer based in Durham, NC with a background in business and finance. After working at a bank for five years, I decided to make a drastic career change and learn about computer programming. I recently completed a 12-week intensive programming bootcamp at the Iron Yard in Durham, where I learned development in Ruby on Rails, HTML, CSS, Bootstrap, JavaScript, jQuery, AJAX, and SQL. Prior to the Iron Yard I took a few community college courses in Java. I also have experience developing in the Agile process and used Test Driven Development.</p>
 
-              <p>I enjoy working in a team, and during my time at the Iron Yard I worked on mlutiple projects that involved collaboration and required a strong work ethic and great attitude. If you would like to learn more about my experience at the Iron Yard and what I have been coding in the last few months, feel free to check out more on my blog -- Wizard of Rails.</p>
+              <p>I enjoy working in a team, and during my time at the Iron Yard I worked on mlutiple projects that involved collaboration and required a strong work ethic and great attitude. If you would like to learn more about my experience at the Iron Yard and what I have been coding in the last few months, feel free to check out more on my blog -- <a href="https://wizardofrails.wordpress.com/" target="_blank">Wizard of Rails.</a></p>
 
               <p>When I am not coding, I enjoy watching sports, listening to podcasts and spending time with my family and friends. If you would like to work with me, feel free to contact me below.
             </p>
