Update info with final project

--- a/index.html
+++ b/index.html
@@ -208,6 +208,31 @@ Mobile Application Dev 1, and Advanced JAVA Programming
 
          <div class="nine columns main-col">
 
+           <div class="row item">
+
+              <div class="twelve columns">
+
+                 <h3>Rider & FareFairy</h3>
+                 <p class="info">Developer <span>&bull;</span> <em class="date">2016</em></p>
+
+                 <!-- <p>
+                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                 Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+                 ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                 Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Nullam dictum felis eu pede mollis pretium.
+                 </p> -->
+
+                 <ul>
+                   <li type="disc">Worked on a team of six developers creating a web application.</li>
+                   <li type="disc">Client facing app used Angular.</li>
+                   <li type="disc">Back end Ruby on Rails API using MySQL database.</li>
+                   <li type="disc">Developed with 2 sprints per week, daily standups, and a 2.5 week turnaround from idea to launch.</li>
+                 </ul>
+
+              </div>
+
+           </div> <!-- item end -->
+
             <div class="row item">
 
                <div class="twelve columns">
